// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundAttachment renders 0 1`] = `
Array [
  .c0 {
  background-attachment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders function 1`] = `
Array [
  .c0 {
  background-attachment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders invalid theme path 1`] = `
Array [
  .c0 {
  background-attachment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders negative number 1`] = `
Array [
  .c0 {
  background-attachment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-attachment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-attachment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-attachment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-attachment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-attachment: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-attachment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-attachment: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-attachment: July;
  }
}

@media April {
  .c0 {
    background-attachment: August;
  }
}

@media January {
  .c0 {
    background-attachment: September;
  }
}

@media April {
  .c0 {
    background-attachment: November;
  }
}

@media June {
  .c0 {
    background-attachment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-attachment: July;
  }
}

@media April {
  .c0 {
    background-attachment: August;
  }
}

@media January {
  .c0 {
    background-attachment: September;
  }
}

@media April {
  .c0 {
    background-attachment: November;
  }
}

@media June {
  .c0 {
    background-attachment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-attachment: January;
  }
}

@media April {
  .c0 {
    background-attachment: December;
  }
}

@media January {
  .c0 {
    background-attachment: April;
  }
}

@media April {
  .c0 {
    background-attachment: May;
  }
}

@media June {
  .c0 {
    background-attachment: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-attachment: January;
  }
}

@media April {
  .c0 {
    background-attachment: December;
  }
}

@media January {
  .c0 {
    background-attachment: April;
  }
}

@media April {
  .c0 {
    background-attachment: May;
  }
}

@media June {
  .c0 {
    background-attachment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders postitive number 1`] = `
Array [
  .c0 {
  background-attachment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders string 1`] = `
Array [
  .c0 {
  background-attachment: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundAttachment renders valid theme path 1`] = `
Array [
  .c0 {
  background-attachment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-attachment: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
